--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.3",
     "hbs": "^4.1.1",
     "helmet": "^4.3.1",
@@ -22,6 +23,7 @@
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "xss-clean": "^0.1.1"
   }
 }
